<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Review">

    <TextView
        android:id="@+id/txt_review_place_title"
        style="@style/txt_style_normal.black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_review_place_name"
        android:textSize="27sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_user" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_user_name"
                style="@style/txt_style_normal.black"
                android:text="@string/txt_review_user_name"
                android:layout_marginBottom="2dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_review_privacy"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <RatingBar
        android:id="@+id/rtb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/txt_content_descr_rating_bar"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        style="@style/txt_style_normal.black"
        android:text="@string/txt_review_user_experience"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_place_review"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="start"
            android:hint="@string/txt_hint_user_experience"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_post"
            style="@style/btn_style_normal"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="15dp"
            android:text="@string/txt_btn_review_post" />
    </LinearLayout>

</LinearLayout>