<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/img_login_page"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/tajmahal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_user_name"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/edt_login_username"
            android:inputType="textEmailAddress" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/txt_hint_password"
            android:inputType="numberPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/btn_style_normal"
                android:text="@string/btn_login_pg_text"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>