<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".place_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView style="@style/cardStyleNormal">

            <ImageView
                android:id="@+id/img_place"
                style="@style/img_Inside_Card_Style_Normal"
                android:layout_height="250dp"
                android:src="@drawable/badrinath" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_place_name"
                style="@style/txt_style_normal.black"
                android:layout_marginBottom="5dp"
                android:text="@string/place_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_place_state"
                style="@style/txt_style_normal"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="@string/place_name_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <RatingBar
                    android:id="@+id/rtb_avg_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:numStars="5"
                    android:stepSize="0.25" />

                <TextView
                    android:id="@+id/txt_avg_rating"
                    style="@style/txt_style_normal"
                    android:layout_marginEnd="5dp" />

                <TextView
                    android:id="@+id/txt_count_rating"
                    style="@style/txt_style_normal"
                    android:background="#ffffff"
                    android:gravity="center_vertical" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_wiki"
                    style="@style/btn_style_normal.place_detail"
                    android:layout_marginEnd="6dp"
                    android:drawableStart="@drawable/ic_wikipedia"
                    android:text="@string/btn_txt_wikipedia"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_map"
                    style="@style/btn_style_normal.place_detail"
                    android:layout_marginEnd="6dp"
                    android:drawableStart="@drawable/ic_direction"
                    android:text="@string/btn_txt_directions"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_review"
                    style="@style/btn_style_normal.place_detail"
                    android:drawableStart="@drawable/ic_review"
                    android:text="@string/btn_txt_review"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <TextView
                style="@style/txt_style_normal.black"
                android:text="@string/txt_place_description" />

            <TextView
                android:id="@+id/txt_place_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="5dp"
                android:maxLines="10"
                android:textSize="15sp" />

            <TextView
                style="@style/txt_style_normal.black"
                android:text="@string/txt_place_reviews" />

            <TextView
                android:id="@+id/txt_place_db_reviews"
                style="@style/txt_style_normal"
                android:layout_marginBottom="15dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>